# simple-rust-neural-network

./: Cargo.toml
src/: lib.rs  mutate.rs  neural_network.rs  nn_group.rs  training_data.rs  types.rs
tests/: fuzz_shapes.rs  grad_signal.rs  mutation_props.rs  nn_group.rs  serde_roundtrip.rs  test_mutation.rs  training_convergence.rs
