[package]
edition = "2024"
name = "rust-project-template"
version = "0.1.0"

[features]

[dependencies]
ndarray = {version = "0.16", features = ["rayon"]}
ndarray-rand = "0.15"
num-traits = "0.2"
rand = "0.9"

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3

[profile.dev]
incremental = true
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[build]
rustc-wrapper = "sccache"
