[package]
edition = "2024"
name = "simple-neural-network"
version = "0.1.0"

[features]
default = []
rayon = ["dep:rayon", "ndarray/rayon"]

[dependencies]
ndarray = {version = "0.16", features = ["std", "serde"], default-features = false}
ndarray-rand = "0.15"
num-traits = "0.2"
rand = "0.9"
rayon = {version = "1.10", optional = true}
serde = {version = "1.0.219", features = ["derive"]}

[target.'cfg(feature = "rayon")'.dependencies]
ndarray = {version = "0.16", features = ["std", "serde", "rayon"], default-features = false}

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3

[profile.dev]
incremental = true
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[build]
rustc-wrapper = "sccache"
