[package]
edition = "2024"
name = "simple-neural-network"
version = "0.1.0"

[features]
default = ["f32"]
f32 = []
f64 = []
gpu = ["tch"]
rayon = ["dep:rayon", "ndarray/rayon"]

[dependencies]
approx = "0.5"
ndarray = {version = "0.16", features = ["std", "serde"], default-features = false}
ndarray-rand = "0.15"
rayon = {version = "1.10", optional = true}
serde = {version = "1.0.219", features = ["derive"]}
tch = {version = "0.20", optional = true}

[target.'cfg(feature = "rayon")'.dependencies]
ndarray = {version = "0.16", features = ["std", "serde", "rayon"], default-features = false}

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3

[profile.dev]
incremental = true
opt-level = 1

[dev-dependencies]
proptest = "1.5"
serde_json = "1.0"

[profile.dev.package."*"]
opt-level = 3

[build]
rustc-wrapper = "sccache"
